[Fix] maintenance page no use dark mode

--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_maintenance"
-    tools:context=".ui.maintenance.MaintenanceActivity">
+    tools:context=".ui.maintenance.MaintenanceActivity"
+    tools:ignore="SpUsage">
 
     <ImageView
         android:id="@+id/iv_logo"
@@ -16,7 +17,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_logo"
+        android:src="@drawable/ic_logo_for_maintenance"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +29,7 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="@string/sorry_website_is_now_maintenance"
-        android:textColor="@color/color_e5e5e5_333333"
+        android:textColor="@color/color_333333"
         android:textSize="@dimen/textSize20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/iv_logo"
@@ -40,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:textColor="@color/color_e5e5e5_333333"
+        android:textColor="@color/color_333333"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +54,7 @@
         android:layout_height="wrap_content"
         android:autoLink="web"
         android:gravity="center"
-        android:textColor="@color/color_e5e5e5_333333"
+        android:textColor="@color/color_333333"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,28 +63,28 @@
 
     <!--20220406 只有宣傳頁、主頁需顯示-->
     <org.cxct.sportlottery.ui.common.ServiceFloatingButton
-        android:visibility="gone"
         android:id="@+id/btn_floating_service"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginBottom="14dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
         android:id="@+id/btn_service"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/bg_radius_23_button_dusk"
+        android:background="@drawable/bg_radius_23_button_dusk_maintenance"
         android:minWidth="100dp"
         android:minHeight="36dp"
         android:paddingStart="18dp"
         android:paddingEnd="18dp"
         android:text="@string/btn_service_maintain"
         android:textAllCaps="true"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
