隱藏 建議反饋文字字眼

--- a/app/src/main/res/layout/fragment_feedback_suggest.xml
+++ b/app/src/main/res/layout/fragment_feedback_suggest.xml
@@ -65,8 +65,8 @@
                     android:lineSpacingExtra="6dp"
                     android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp"
-                    tools:text="@string/feedback_description_money"
-                    tools:visibility="gone" />
+                    android:visibility="gone"
+                    tools:text="@string/feedback_description_money" />
 
                 <TextView
                     android:id="@+id/btn_submit"
