--- a/app/src/main/res/layout/view_account_history_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_title_bar.xml
@@ -39,8 +39,8 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <org.cxct.sportlottery.ui.component.StatusSelectorView
-        android:id="@+id/status_selector"
+    <org.cxct.sportlottery.ui.component.StatusSpinnerView1
+        android:id="@+id/status_selector1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
@@ -50,6 +50,17 @@
         app:defaultStatusText="@string/all_sport"
         app:horizontalChainStyle="spread"
         app:layout_constraintTop_toBottomOf="@id/iv_bg" />
+<!--    <org.cxct.sportlottery.ui.component.StatusSelectorView-->
+<!--        android:id="@+id/status_selector"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="10dp"-->
+<!--        android:layout_marginVertical="8dp"-->
+<!--        app:textGravity="start"-->
+<!--        app:backgroundFrame="@drawable/frame_color_silver_light_stroke"-->
+<!--        app:defaultStatusText="@string/all_sport"-->
+<!--        app:horizontalChainStyle="spread"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/iv_bg" />-->
 
     <TextView
         android:id="@+id/tvUsTime"
