--- a/app/src/main/res/layout/itemview_outright_league_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_league_v4.xml
@@ -22,6 +22,8 @@
             android:lineHeight="24dp"
             android:lineSpacingExtra="4dp"
             android:paddingHorizontal="24dp"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:textColor="@color/color_e5e5e5_333333"
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
