--- a/awesome-calendar/src/main/res/values-night/colors.xml
+++ b/awesome-calendar/src/main/res/values-night/colors.xml
@@ -2,7 +2,6 @@
 
 <resources>
 
-    <color name="background">@color/default_date_color</color>
-
+    <color name="background">#191919</color>
 
 </resources>
