--- a/app/src/main/res/drawable/bg_play_category_pop.xml
+++ b/app/src/main/res/drawable/bg_play_category_pop.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:width="240dp" android:height="168dp">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/play_category_pop_bg_color" />
-            <corners android:radius="6dp" />
-        </shape>
-    </item>
-</selector>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/color_2B2B2B_e2e2e2" />
+    <corners android:radius="10dp" />
+</shape>
