--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -20,7 +20,7 @@
         android:background="@color/color_191919_FCFCFC"
         app:layout_constraintTop_toBottomOf="@id/date_range_selector">
 
-        <org.cxct.sportlottery.ui.component.StatusSelectorView
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_order_status"
             android:layout_width="0dp"
             android:layout_height="44dp"
@@ -30,7 +30,7 @@
             app:defaultStatusText="@string/all_order_status"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
 
-        <org.cxct.sportlottery.ui.component.StatusSelectorView
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_method_status"
             android:layout_width="0dp"
             android:layout_height="44dp"
