--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
-    <org.cxct.sportlottery.ui.component.StatusSelectorView
+    <org.cxct.sportlottery.ui.component.StatusSpinnerView
         android:id="@+id/status_selector"
         android:layout_width="match_parent"
         android:layout_height="44dp"
