--- a/app/src/main/res/layout/fragment_transaction_status.xml
+++ b/app/src/main/res/layout/fragment_transaction_status.xml
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <org.cxct.sportlottery.ui.component.StatusSelectorView
+                <org.cxct.sportlottery.ui.component.StatusSpinnerView
                     android:id="@+id/bet_type_selector"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                     app:horizontalChainStyle="spread"
                     app:textGravity="start|center_vertical" />
 
-                <org.cxct.sportlottery.ui.component.StatusSelectorView
+                <org.cxct.sportlottery.ui.component.StatusSpinnerView
                     android:id="@+id/game_type_selector"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
