--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -40,7 +40,7 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <org.cxct.sportlottery.ui.component.StatusSelectorView
+    <org.cxct.sportlottery.ui.component.StatusSpinnerView
         android:id="@+id/date_selector"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
         app:textGravity="start|center_vertical" />
 
 
-    <org.cxct.sportlottery.ui.component.StatusSelectorView
+    <org.cxct.sportlottery.ui.component.StatusSpinnerView
         android:id="@+id/sport_selector"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
