--- a/app/src/main/res/layout/view_account_history_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_title_bar.xml
@@ -39,8 +39,8 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <org.cxct.sportlottery.ui.component.StatusSpinnerView1
-        android:id="@+id/status_selector1"
+    <org.cxct.sportlottery.ui.component.StatusSpinnerView
+        android:id="@+id/status_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
@@ -77,7 +77,7 @@
         app:drawableStartCompat="@drawable/ic_info_white"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status_selector" />
+        app:layout_constraintTop_toBottomOf="@+id/status_spinner" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
