--- a/app/src/main/res/layout/activity_results_settlement.xml
+++ b/app/src/main/res/layout/activity_results_settlement.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:topTitleText="@string/game_settlement"/>
 
+
     <LinearLayout
         android:id="@+id/linear_filter"
         android:layout_width="match_parent"
@@ -25,42 +26,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/custom_tool_bar">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/ll_game_type"
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
+            android:id="@+id/status_game_type"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="2"
-            android:background="@drawable/bg_white_square_shape_4dp_gray_stroke"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingHorizontal="12dp">
+            app:arrowAtEnd="true"
+            app:defaultStatusText="@string/all_sport" />
 
-            <TextView
-                android:id="@+id/tv_game_type"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:ellipsize="end"
-                android:gravity="start|center_vertical"
-                android:maxWidth="50dp"
-                android:maxLines="1"
-                android:textColor="@color/color_e5e5e5_333333"
-                android:textSize="@dimen/textSize14sp"
-                app:layout_constraintEnd_toStartOf="@id/imageView"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:text="@string/soccer" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:src="@drawable/ic_arrow_down_gray"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_game_league"
