--- a/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
@@ -292,8 +292,8 @@
                                 android:letterSpacing="0.05"
                                 android:maxLength="7"
                                 android:paddingStart="10dp"
-                                android:textColor="@color/color_FFFFFF_0760D4"
-                                android:textColorHint="@color/color_404040"
+                                android:textColor="@color/color_FFFFFF_000000"
+                                android:textColorHint="@color/color_939393_cccccc"
                                 android:textSize="@dimen/textSize16sp"
                                 tools:text="100"
                                 app:layout_constraintBottom_toTopOf="@+id/tv_error_message"
