--- a/app/src/main/res/layout/item_match_result_match.xml
+++ b/app/src/main/res/layout/item_match_result_match.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="7dp"
                 android:layout_marginEnd="7dp"
-                android:text="@string/verse_"
+                android:text="@string/verse_2"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize13sp"
                 app:layout_constraintBottom_toBottomOf="parent"
