优化下拉设置背景以及最大高度

--- a/app/src/main/res/layout/fragment_transaction_status.xml
+++ b/app/src/main/res/layout/fragment_transaction_status.xml
@@ -72,12 +72,11 @@
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginVertical="8dp"
                     android:layout_weight="1"
+                    android:background="@drawable/frame_color_silver_light_stroke"
                     app:arrowSrc="@drawable/ic_arrow_color_gray"
-                    app:backgroundFrame="@drawable/frame_color_silver_light_stroke"
-                    app:defaultBottomSheetTitleText="@string/choose_bet_state"
                     app:defaultStatusText="@string/waiting"
                     app:horizontalChainStyle="spread"
-                    app:textGravity="start|center_vertical" />
+                    app:textGravity="start|center_vertical"/>
 
                 <org.cxct.sportlottery.ui.component.StatusSpinnerView
                     android:id="@+id/game_type_selector"
@@ -86,12 +85,10 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginVertical="8dp"
                     android:layout_weight="1"
-                    app:arrowSrc="@drawable/ic_arrow_color_gray"
-                    app:backgroundFrame="@drawable/frame_color_silver_light_stroke"
-                    app:defaultBottomSheetTitleText="@string/choose_bet_state"
+                    android:background="@drawable/frame_color_silver_light_stroke"
                     app:defaultStatusText="@string/all_sport"
                     app:horizontalChainStyle="spread"
-                    app:textGravity="start|center_vertical" />
+                    app:textGravity="start|center_vertical"/>
 
             </LinearLayout>
 
