--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -26,8 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            app:arrowAtEnd="true"
-            app:defaultBottomSheetTitleText="@string/text_account_history_bet"
+            android:background="@color/color_191919_FCFCFC"
             app:defaultStatusText="@string/text_account_history_bet"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
 
