--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -25,8 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            app:arrowAtEnd="true"
-            app:defaultBottomSheetTitleText="@string/choose_order"
+            android:background="@color/color_191919_FCFCFC"
             app:defaultStatusText="@string/all_order_status"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
 
@@ -35,8 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
-            app:arrowAtEnd="true"
-            app:defaultBottomSheetTitleText="@string/choose_method"
+            android:background="@color/color_191919_FCFCFC"
             app:defaultStatusText="@string/recharge_channel_all"
             app:layout_constraintTop_toBottomOf="@id/date_range_selector" />
 
