--- a/app/src/main/res/layout/activity_results_settlement.xml
+++ b/app/src/main/res/layout/activity_results_settlement.xml
@@ -32,6 +32,7 @@
             android:layout_height="40dp"
             android:layout_marginEnd="4dp"
             android:layout_weight="2"
+            android:background="@drawable/bg_white_square_shape_4dp_gray_stroke"
             app:arrowAtEnd="true"
             app:defaultStatusText="@string/all_sport" />
 
