--- a/app/src/main/res/layout/button_bet.xml
+++ b/app/src/main/res/layout/button_bet.xml
@@ -72,7 +72,7 @@
         android:background="@drawable/selector_button_radius_5_bet"
         android:gravity="center"
         android:text="@string/bet_info_accept_odds_change"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize13sp"
         android:visibility="gone"/>
 
@@ -85,7 +85,7 @@
         android:gravity="center"
         android:text="@string/btn_login"
         android:textAllCaps="true"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
