--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -20,9 +20,8 @@
         android:id="@+id/status_selector"
         android:layout_width="match_parent"
         android:layout_height="44dp"
+        android:background="@color/color_191919_FCFCFC"
         app:defaultStatusText="@string/all_status"
-        app:defaultBottomSheetTitleText="@string/choose_title"
-        app:arrowAtEnd="true"
         app:layout_constraintTop_toBottomOf="@id/date_range_selector"/>
 
     <LinearLayout
