--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -18,9 +18,8 @@
         android:id="@+id/status_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/color_191919_FCFCFC"
         app:defaultStatusText="@string/all_plat_type"
-        app:defaultBottomSheetTitleText="@string/select_plat"
-        app:arrowAtEnd="true"
         app:layout_constraintTop_toBottomOf="@id/date_search_bar" />
 
 
