--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -47,13 +47,13 @@
         android:layout_marginVertical="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
-        app:backgroundFrame="@drawable/frame_color_silver_light_stroke"
+        android:background="@drawable/frame_color_silver_light_stroke"
         app:defaultStatusText="6-21 星期一"
+        app:textGravity="start|center_vertical"
         app:layout_constraintEnd_toStartOf="@id/sport_selector"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_bg"
-        app:textGravity="start|center_vertical" />
+        app:layout_constraintTop_toBottomOf="@id/iv_bg" />
 
 
     <org.cxct.sportlottery.ui.component.StatusSpinnerView
@@ -63,7 +63,7 @@
         android:layout_marginVertical="8dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="8dp"
-        app:backgroundFrame="@drawable/frame_color_silver_light_stroke"
+        android:background="@drawable/frame_color_silver_light_stroke"
         app:defaultStatusText="@string/all_sport"
         app:layout_constraintBottom_toBottomOf="@+id/date_selector"
         app:layout_constraintEnd_toEndOf="parent"
