--- a/app/src/main/res/layout/view_account_history_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_title_bar.xml
@@ -45,8 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="8dp"
+        android:background="@drawable/frame_color_silver_light_stroke"
         app:textGravity="start"
-        app:backgroundFrame="@drawable/frame_color_silver_light_stroke"
         app:defaultStatusText="@string/all_sport"
         app:horizontalChainStyle="spread"
         app:layout_constraintTop_toBottomOf="@id/iv_bg" />
