优化身份证件下拉，版本升级弹窗

--- a/app/src/main/res/layout/activity_verify_identity.xml
+++ b/app/src/main/res/layout/activity_verify_identity.xml
@@ -14,10 +14,10 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
         app:navGraph="@navigation/identity_navigation"
         tools:layout="@layout/fragment_verify_identity_new"
-        />
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
