--- a/app/src/main/res/layout/dialog_app_download.xml
+++ b/app/src/main/res/layout/dialog_app_download.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/find_new_version"
-            android:textColor="@color/color_191919_FCFCFC"
+            android:textColor="@color/color_FCFCFC"
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/bg_radius_8_button_white"
+            android:background="@drawable/bg_radius_8_white_only"
             android:maxLines="1"
             android:paddingHorizontal="10dp"
             android:text="@string/version_name"
