--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:navigationBarColor">@color/color_191919</item>
         <item name="android:statusBarColor">@color/color_191919</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:overScrollMode">never</item>
     </style>
 
 
