--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:colorControlHighlight">@android:color/transparent</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationStyle</item>
+        <item name="android:overScrollMode">never</item>
     </style>
 
     <style name="VietnamTheme" parent="AppTheme">
