--- a/app/src/main/res/layout/content_bet_info_item_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v2.xml
@@ -246,7 +246,7 @@
                             android:textColor="@color/color_FFFFFF_000000"
                             android:textColorHint="@color/color_939393_cccccc"
                             android:textSize="@dimen/textSize16sp"
-                            app:layout_constraintBottom_toTopOf="@+id/tv_error_message"
+                            app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toStartOf="@+id/btnRecharge"
                             android:layout_marginEnd="@dimen/margin_12"
@@ -309,7 +309,7 @@
 
 
                         <TextView
-                            android:id="@+id/tv_error_message"
+                            android:id="@+id/tvErrorMessage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
@@ -344,7 +344,7 @@
                             android:layout_height="120dp"
                             android:layout_marginTop="@dimen/margin_4"
                             android:visibility="gone"
-                            app:layout_constraintTop_toBottomOf="@+id/tv_error_message" />
+                            app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage" />
                         <!--                        <View-->
                         <!--                            android:layout_width="match_parent"-->
                         <!--                            android:layout_height="150dp"-->
