--- a/app/src/main/res/layout/item_bet_list_batch_control_connect.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect.xml
@@ -240,7 +240,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/tv_error_message"
+                android:id="@+id/tvErrorMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
