--- a/app/src/main/res/drawable-night/bg_radius_2_edittext_unfocus.xml
+++ b/app/src/main/res/drawable-night/bg_radius_2_edittext_unfocus.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_404040" />
-    <solid android:color="@color/color_1A1A1A" />
+    <solid android:color="@color/color_242424" />
 </shape>
