--- a/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
+++ b/app/src/main/res/drawable/bg_radius_2_edittext_focus.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/color_317FFF_0760D4" />
-    <solid android:color="@color/color_404348_FFFFFF" />
+        android:color="@color/color_317FFF" />
+    <solid android:color="@color/color_FCFCFC" />
 </shape>
