[開發中] 增加ListLoadingView

--- a/app/src/main/res/layout/fragment_game_v3.xml
+++ b/app/src/main/res/layout/fragment_game_v3.xml
@@ -140,6 +140,7 @@
             android:overScrollMode="never"
             android:background="@color/color_191919_FCFCFC"/>
         <org.cxct.sportlottery.widget.ListLoadingView
+            android:id="@+id/listLoadingView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </FrameLayout>
