--- a/app/src/main/res/layout/view_list_loading.xml
+++ b/app/src/main/res/layout/view_list_loading.xml
@@ -4,7 +4,8 @@ android:id="@+id/shimmerFrameLayout"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:layout_gravity="center"
-android:orientation="vertical">
+android:orientation="vertical"
+android:background="@color/background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
