--- a/app/src/main/res/layout/itemview_country_v4.xml
+++ b/app/src/main/res/layout/itemview_country_v4.xml
@@ -20,7 +20,7 @@
         android:layout_marginEnd="12dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:textColor="#202020"
+        android:textColor="@color/color_e5e5e5_202020"
         android:textSize="@dimen/textSize14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/country_border"
