--- a/app/src/main/res/drawable-night/bg_radius_4_edittext_focus.xml
+++ b/app/src/main/res/drawable-night/bg_radius_4_edittext_focus.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/color_317FFF" />
-    <solid android:color="@color/color_1A1A1A" />
+    <solid android:color="@color/color_191919" />
 </shape>
