--- a/app/src/main/res/drawable/bg_radius_4_edittext_focus.xml
+++ b/app/src/main/res/drawable/bg_radius_4_edittext_focus.xml
@@ -4,6 +4,6 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="#ff0f53af" />
-    <solid android:color="@color/white" />
+        android:color="@color/color_0760D4" />
+    <solid android:color="@color/color_FCFCFC" />
 </shape>
