--- a/app/src/main/res/layout/fragment_game_v3.xml
+++ b/app/src/main/res/layout/fragment_game_v3.xml
@@ -138,11 +138,12 @@
             tools:itemCount="1"
             tools:listitem="@layout/itemview_league_v5"
             android:overScrollMode="never"
-            android:background="@color/color_191919_FCFCFC"/>
+            android:background="@color/color_191919_FCFCFC"
+            android:visibility="gone"/>
         <org.cxct.sportlottery.widget.ListLoadingView
             android:id="@+id/listLoadingView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
