--- a/app/src/main/res/layout/shimmer_placeholder_layout.xml
+++ b/app/src/main/res/layout/shimmer_placeholder_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="230dp"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -15,7 +15,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="10dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="180dp"
@@ -42,7 +42,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="10dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="180dp"
@@ -68,31 +68,54 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal">
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="5dp">
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
+                android:background="@color/color_cccccc" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
+                android:background="@color/color_cccccc" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical"
             android:padding="5dp">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="180dp"
-                android:layout_height="18dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@color/color_cccccc" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="150dp"
-                android:layout_height="12dp"
-                android:layout_marginTop="5sp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
                 android:background="@color/color_cccccc" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="100dp"
-                android:layout_height="12dp"
-                android:layout_marginTop="5sp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8sp"
                 android:background="@color/color_cccccc" />
         </LinearLayout>
     </LinearLayout>
