--- a/app/src/main/res/drawable/ic_icon_sport_neutral_unselected.xml
+++ b/app/src/main/res/drawable/ic_icon_sport_neutral_unselected.xml
@@ -1,13 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
+    android:width="20dp"
+    android:height="20dp"
     android:viewportWidth="20"
     android:viewportHeight="20">
-  <path
-      android:pathData="M16.4284,1C17.8486,1 19,2.1514 19,3.5716L19,16.4284C19,17.8486 17.8486,19 16.4284,19L3.5716,19C2.1514,19 1,17.8486 1,16.4284L1,3.5716C1,2.1514 2.1514,1 3.5716,1L16.4284,1ZM10,17.6572L10,4.8L10,17.6572ZM14.2856,3.5714C15.4691,3.5714 16.4286,4.5309 16.4286,5.7144L16.4286,7.4317L3.5714,7.4317L3.5714,5.7144C3.5714,4.5309 4.5309,3.5714 5.7144,3.5714L14.2856,3.5714Z"
-      android:strokeLineJoin="bevel"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="@color/color_A3A3A3_666666"
-      android:fillType="evenOdd"/>
+    <path
+        android:fillColor="@color/color_A3A3A3_666666"
+        android:fillType="evenOdd"
+        android:pathData="M14.4998,3C15.8788,3 16.9998,4.121 16.9998,5.5L16.9998,5.5L16.9998,14.5C16.9998,15.879 15.8788,17 14.4998,17L14.4998,17L5.4998,17C4.1218,17 2.9998,15.879 2.9998,14.5L2.9998,14.5L2.9998,5.5C2.9998,4.121 4.1218,3 5.4998,3L5.4998,3ZM14.4998,4L5.4998,4C4.6728,4 3.9998,4.673 3.9998,5.5L3.9998,5.5L3.9998,14.5C3.9998,15.327 4.6728,16 5.4998,16L5.4998,16L14.4998,16C15.3268,16 15.9998,15.327 15.9998,14.5L15.9998,14.5L15.9998,5.5C15.9998,4.673 15.3268,4 14.4998,4L14.4998,4ZM7.77,5.7999L12.15,12.1719L12.198,12.1719L12.198,5.7999L13.506,5.7999L13.506,14.3669L12.234,14.3669L7.806,7.9239L7.758,7.9239L7.758,14.3669L6.45,14.3669L6.45,5.7999L7.77,5.7999Z"
+        android:strokeWidth="1"
+        android:strokeColor="#00000000" />
 </vector>
