--- a/app/src/main/res/layout/content_cant_parlay_warn.xml
+++ b/app/src/main/res/layout/content_cant_parlay_warn.xml
@@ -13,7 +13,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom"
         android:orientation="horizontal"
         android:paddingStart="8dp"
         android:paddingTop="18dp"
@@ -23,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
+            android:layout_marginTop="7dp"
             android:layout_marginBottom="5.5dp"
             android:src="@drawable/oval_red_6dp" />
 
