--- a/app/src/main/res/layout/home_menu_block.xml
+++ b/app/src/main/res/layout/home_menu_block.xml
@@ -38,6 +38,7 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -114,6 +115,7 @@
                 android:textColor="@color/home_card_text_color"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold"
+                android:visibility="invisible"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
