[fix] 24744 默認查詢時間修正 (僅調整存款&提款紀錄)

--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -11,6 +11,7 @@
         android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
         android:layout_height="42dp"
+        app:minusDays="6"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
