--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -69,6 +69,7 @@
     <declare-styleable name="CalendarBottomSheetStyle">
         <attr name="calendarLayout" format="reference" />
         <attr name="dateRange" format="integer" />
+        <attr name="minusDays" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="StatusBottomSheetStyle">
