--- a/app/src/main/res/layout/dialog_app_download.xml
+++ b/app/src/main/res/layout/dialog_app_download.xml
@@ -30,8 +30,10 @@
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="start"
         android:orientation="vertical"
+        android:paddingLeft="@dimen/margin_15"
+        android:paddingRight="@dimen/margin_15"
         app:layout_constraintBottom_toBottomOf="@id/iv_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/iv_top">
@@ -83,8 +85,8 @@
             android:layout_width="0dp"
             android:layout_height="10dp"
             android:layout_marginHorizontal="9dp"
-            android:layout_marginTop="27dp"
-            android:layout_marginBottom="33dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
             android:layout_weight="1"
             android:indeterminate="false"
             android:max="100"
