--- a/app/src/main/res/layout/home_menu_block.xml
+++ b/app/src/main/res/layout/home_menu_block.xml
@@ -265,6 +265,28 @@
                 app:cvIcon="@drawable/ic_game_update"
                 app:cvTitle="@string/version_update" />
 
+            <!--     coming soon start       -->
+            <org.cxct.sportlottery.ui.game.home.HomeGameCard
+                android:id="@+id/card_baseball_coming_soon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                app:cvCount="@string/coming_soon"
+                app:cvIcon="@drawable/ic_game_baseball"
+                app:cvTextSize="12"
+                app:cvTitle="@string/baseball" />
+
+            <org.cxct.sportlottery.ui.game.home.HomeGameCard
+                android:id="@+id/card_esports_coming_soon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                app:cvCount="@string/coming_soon"
+                app:cvIcon="@drawable/ic_game_esports"
+                app:cvTextSize="12"
+                app:cvTitle="@string/esports" />
+            <!--     coming soon end       -->
+
         </LinearLayout>
 
     </HorizontalScrollView>
