[feature] 宣傳頁加入確認年齡彈窗

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -73,6 +73,9 @@
     <color name="color_2a2a2a_dedede">@color/color_2a2a2a</color>
     <color name="color_939393_cccccc">@color/color_939393</color>
     <color name="color_303030_E2E2E2">@color/color_303030</color>
+    <color name="color_313131_e2e2e2">@color/color_313131</color>
+    <color name="color_5d5d5d_888888">@color/color_5d5d5d</color>
+    <color name="color_e5e5e5_666666">@color/color_e5e5e5</color>
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_white_70</color>
