--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -358,7 +358,7 @@
                         android:minHeight="32dp"
                         android:text="@string/get_verification_code"
                         android:textAllCaps="false"
-                        android:textColor="@color/color_191919_FCFCFC"
+                        android:textColor="@color/color_FCFCFC"
                         android:textSize="@dimen/textSize14sp" />
 
                 </LinearLayout>
