--- a/awesome-calendar/src/main/res/values-night/colors.xml
+++ b/awesome-calendar/src/main/res/values-night/colors.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-
+    <color name="selected_date_circle_color">#2B2B2B</color>
     <color name="background">#191919</color>
 
+    <color name="title_color">#DDDDDD</color>
+    <color name="date_color">#CCCCCC</color>
+    <color name="week_color">#CCCCCC</color>
+
+    <!-- Calendar Date -->
+    <color name="default_date_color">#FFFFFF</color>
+    <color name="disable_date_color">#BDBDBD</color>
+    <color name="range_date_color">#54B948</color>
+    <color name="selected_date_color">#FFFFFF</color>
+    <color name="range_bg_color">#88000000</color>
+    <color name="calendar_text">#DDDDDD</color>
 </resources>
