--- a/app/src/main/res/layout/itemview_league_v5.xml
+++ b/app/src/main/res/layout/itemview_league_v5.xml
@@ -6,46 +6,73 @@
     android:layout_height="wrap_content"
     tools:ignore="SpUsage,ContentDescription,WebViewLayout,UnusedAttribute">
 
-    <TextView
-        android:id="@+id/league_text"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/color_212121_ededed"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        android:lineHeight="20dp"
-        android:maxLines="2"
-        android:paddingStart="16dp"
-        android:paddingEnd="34dp"
-        android:textColor="@color/color_e5e5e5_202020"
-        android:textSize="@dimen/textSize14sp"
-        android:textStyle="bold"
-        tools:text="欧洲足球锦标赛2020" />
-
-    <ImageView
-        android:id="@+id/iv_country"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="10dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_earth" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/league_odd_list"
+    <RelativeLayout
+        android:id="@+id/rl_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/league_text"
-        android:nestedScrollingEnabled="false"
-        android:overScrollMode="never"
-        tools:itemCount="1"
-        tools:listitem="@layout/itemview_league_odd_v5" />
+        android:visibility="invisible">
 
-    <View
+        <TextView
+            android:id="@+id/league_text"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/color_212121_ededed"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:lineHeight="20dp"
+            android:maxLines="2"
+            android:paddingStart="16dp"
+            android:paddingEnd="34dp"
+            android:textColor="@color/color_e5e5e5_202020"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"
+            tools:text="欧洲足球锦标赛2020" />
+
+        <ImageView
+            android:id="@+id/iv_country"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_earth" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/league_odd_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/league_text"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            tools:itemCount="1"
+            tools:listitem="@layout/itemview_league_odd_v5" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_below="@id/league_odd_list"
+            android:background="@color/color_191919_FCFCFC" />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/listLoading"
         android:layout_width="match_parent"
-        android:layout_height="8dp"
-        android:layout_below="@id/league_odd_list"
-        android:background="@color/color_191919_FCFCFC" />
+        android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/view_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <include
+            layout="@layout/view_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 </RelativeLayout>
