修改：顶部调整颜色和图片

--- a/app/src/main/res/drawable/icon_bell.xml
+++ b/app/src/main/res/drawable/icon_bell.xml
@@ -1,20 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="27dp"
-    android:height="23dp"
-    android:viewportWidth="27"
-    android:viewportHeight="23">
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="30"
+    android:viewportHeight="30">
   <group>
+    <clip-path
+        android:pathData="M0,0h30v30h-30z"/>
     <path
-        android:pathData="M22.3462,3.9C23.8108,3.9 25.0083,5.0487 25.095,6.4981L25.1,6.6667L25.1,17.3333C25.1,18.8046 23.9568,20.0078 22.5139,20.0949L22.3462,20.1L4.6538,20.1C3.1892,20.1 1.9917,18.9513 1.905,17.5019L1.9,17.3333L1.9,6.6667C1.9,5.1954 3.0432,3.9922 4.4861,3.905L4.6538,3.9L22.3462,3.9ZM22.3414,5.4332L4.6538,5.4332C4.0626,5.4332 3.5633,5.8557 3.4509,6.42L3.4329,6.543L3.4269,6.6667L3.4269,17.3333C3.4269,17.9279 3.8473,18.4297 4.4085,18.5426L4.5308,18.5607L4.6538,18.5667L22.3462,18.5667C22.9374,18.5667 23.4367,18.1443 23.5491,17.58L23.5671,17.457L23.5731,17.3333L23.5731,6.6667C23.5731,6.0721 23.1527,5.5703 22.5915,5.4574L22.4692,5.4393L22.3414,5.4332Z"
-        android:strokeWidth="1"
-        android:fillColor="#666666"
+        android:pathData="M23.846,7C25.312,7 26.5,8.194 26.5,9.667L26.5,20.333C26.5,21.806 25.312,23 23.846,23L6.154,23C4.688,23 3.5,21.806 3.5,20.333L3.5,9.667C3.5,8.194 4.688,7 6.154,7L23.846,7ZM23.846,8.333L6.154,8.333C5.464,8.333 4.897,8.862 4.833,9.538L4.827,9.667L4.827,20.333C4.827,21.026 5.353,21.596 6.026,21.661L6.154,21.667L23.846,21.667C24.536,21.667 25.103,21.138 25.167,20.462L25.173,20.333L25.173,9.667C25.173,8.974 24.647,8.404 23.974,8.339L23.846,8.333Z"
+        android:strokeWidth="0.2"
+        android:fillColor="#FFFFFF"
         android:fillType="nonZero"
-        android:strokeColor="#00000000"/>
+        android:strokeColor="#FFFFFF"/>
     <path
-        android:pathData="M23.6682,4.3724L13.8909,11.4678L13.802,11.5227C13.5794,11.6394 13.3008,11.6176 13.0926,11.4609L3.8259,4.4824L3.7197,4.4735L2.4031,5.156L2.3891,5.3247L12.1771,12.6881L12.3215,12.7879C13.0824,13.2691 14.0566,13.2394 14.7852,12.7106L24.5626,5.6151L24.585,5.4758L23.8081,4.3949L23.6682,4.3724Z"
-        android:strokeWidth="1"
-        android:fillColor="#666666"
+        android:pathData="M5.266,7.562L14.533,14.541C14.773,14.722 15.094,14.745 15.355,14.608L15.45,14.549L25.227,7.453L26.004,8.534L16.226,15.63C15.528,16.137 14.598,16.161 13.878,15.706L13.737,15.608L3.949,8.245L5.266,7.562Z"
+        android:strokeWidth="0.2"
+        android:fillColor="#FFFFFF"
         android:fillType="nonZero"
-        android:strokeColor="#00000000"/>
+        android:strokeColor="#FFFFFF"/>
+
   </group>
 </vector>
